--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,15 @@
 {
     "python.autoComplete.extraPaths": [
         "/home/michael/catkin_ws/install/warehouse_ros_mongo/lib/python3.8/site-packages",
+        "/home/michael/catkin_ws/build/traceback_bringup",
+        "/home/michael/catkin_ws/install/traceback_bringup/lib/python3.8/site-packages",
+        "/home/michael/catkin_ws/build/sensor_listener",
+        "/home/michael/catkin_ws/install/sensor_listener/lib/python3.8/site-packages",
         "/opt/ros/foxy/lib/python3.8/site-packages"
-    ]
+    ],
+    "python.analysis.extraPaths": [
+        "/home/michael/catkin_ws/install/warehouse_ros_mongo/lib/python3.8/site-packages",
+        "/opt/ros/foxy/lib/python3.8/site-packages"
+    ],
+    "python.formatting.provider": "black"
 }
