--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "python.autoComplete.extraPaths": [
+        "/home/michael/catkin_ws/devel_isolated/mongodb_store/lib/python3/dist-packages",
+        "/home/michael/catkin_ws/devel_isolated/mongodb_store_msgs/lib/python3/dist-packages",
         "/opt/ros/noetic/lib/python3/dist-packages"
     ]
 }
