--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,13 @@
         "/home/michael/catkin_ws/devel_isolated/mongodb_store/lib/python3/dist-packages",
         "/home/michael/catkin_ws/devel_isolated/mongodb_store_msgs/lib/python3/dist-packages",
         "/opt/ros/noetic/lib/python3/dist-packages"
+    ],
+    "files.associations": {
+        "iostream": "cpp"
+    },
+    "python.analysis.extraPaths": [
+        "/home/michael/catkin_ws/devel_isolated/mongodb_store/lib/python3/dist-packages",
+        "/home/michael/catkin_ws/devel_isolated/mongodb_store_msgs/lib/python3/dist-packages",
+        "/opt/ros/noetic/lib/python3/dist-packages"
     ]
 }
