--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "src/turtlebot3_simulations"]
 	path = src/turtlebot3_simulations
-	url = https://github.com/ROBOTIS-GIT/turtlebot3_simulations.git
+	url = https://github.com/michaelfong2017/turtlebot3_simulations.git
 	branch = noetic-devel
 [submodule "src/m-explore"]
 	path = src/m-explore
 	url = https://github.com/michaelfong2017/m-explore.git
-	branch = noetic-devel
+	branch = traceback_explore
 [submodule "src/mongodb_store"]
 	path = src/mongodb_store
-	url = https://github.com/strands-project/mongodb_store.git
+	url = https://github.com/michaelfong2017/mongodb_store.git
 	branch = noetic-devel
