Map merging works only when the yaw of all robots are the same. It works well for yaw = 1.57 or 0.57 radian.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,7 +72,8 @@
         "typeindex": "cpp",
         "typeinfo": "cpp",
         "variant": "cpp",
-        "bit": "cpp"
+        "bit": "cpp",
+        "*.ipp": "cpp"
     },
     "python.analysis.extraPaths": [
         "/home/michael/catkin_ws/devel_isolated/mongodb_store/lib/python3/dist-packages",
