--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,5 +79,6 @@
         "/home/michael/catkin_ws/devel_isolated/mongodb_store/lib/python3/dist-packages",
         "/home/michael/catkin_ws/devel_isolated/mongodb_store_msgs/lib/python3/dist-packages",
         "/opt/ros/noetic/lib/python3/dist-packages"
-    ]
+    ],
+    "C_Cpp.errorSquiggles": "enabled"
 }
