Subscribe to /tb3*/camera/rgb/image_raw and convert ros image to cv image.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,7 +74,8 @@
         "variant": "cpp",
         "bit": "cpp",
         "*.ipp": "cpp",
-        "core": "cpp"
+        "core": "cpp",
+        "regex": "cpp"
     },
     "python.analysis.extraPaths": [
         "/home/michael/catkin_ws/devel_isolated/mongodb_store/lib/python3/dist-packages",
