- Send goal and traced robot's image to tracer robot. - Receive both images of tracer robot and traced robot at the same location (if the proposed transform is correct).

--- a/src/traceback/CMakeLists.txt
+++ b/src/traceback/CMakeLists.txt
@@ -17,6 +17,7 @@ find_package(catkin REQUIRED COMPONENTS
   tf
   visualization_msgs
   tf2_geometry_msgs
+  traceback_msgs
 )
 
 find_package(Boost REQUIRED COMPONENTS thread)
