--- a/src/traceback_msgs/package.xml
+++ b/src/traceback_msgs/package.xml
@@ -51,6 +51,7 @@
   <buildtool_depend>catkin</buildtool_depend>
   <depend>geometry_msgs</depend>
   <depend>move_base_msgs</depend>
+  <depend>sensor_msgs</depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_export_depend>roscpp</build_export_depend>
